[gd_scene load_steps=10 format=2]

[ext_resource path="res://tower-d.gd" type="Script" id=1]
[ext_resource path="res://assets/images/fire-range-100.png" type="Texture" id=2]
[ext_resource path="res://assets/images/tower-d.png" type="Texture" id=3]
[ext_resource path="res://assets/images/spark-2.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/electricity.ogg" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 7.0

[sub_resource type="Curve" id=2]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.510742 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]

flags = 4
width = 2048
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 0.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 150.0
initial_velocity_random = 0.0
angular_velocity = 100.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 1.0
scale = 0.5
scale_random = 0.5
scale_curve = SubResource( 3 )
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angular Velocity" ]

[node name="TowerD" type="RigidBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 3
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 5
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
__meta__ = {
"__editor_plugin_screen__": "2D"
}

[node name="FireRange" type="Sprite" parent="." index="0"]

visible = false
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="." index="1"]

texture = ExtResource( 3 )
vframes = 3

[node name="TextureButton" type="TextureButton" parent="." index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="3"]

scale = Vector2( 20, 20 )
shape = SubResource( 1 )

[node name="ParticlesRay" type="Particles2D" parent="." index="4"]

position = Vector2( 0, -24 )
rotation = -1.5708
emitting = true
amount = 15
lifetime = 0.8
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 4 )
texture = ExtResource( 4 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Time", "Transform" ]

[node name="AudioElectricity" type="AudioStreamPlayer2D" parent="." index="5"]

stream = ExtResource( 5 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="body_entered" from="." to="." method="_on_body_enter"]

[connection signal="body_exited" from="." to="." method="_on_body_exit"]


